modern-democracy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: democracy
  namespace: democracy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - test.radicalgeek.co.uk
      secretName: democracy-tls
  rules:
    - host: test.radicalgeek.co.uk
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8787
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 4173
